[project]
name = "daily-dose-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram[redis]>=3.24.0",
    "asyncpg>=0.31.0",
    "cachetools>=6.2.4",
    "dotenv>=0.9.9",
    "greenlet>=3.3.0",
    "matplotlib>=3.10.8",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
]
